<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Green Color Zigzag ,height 600dp -->
    <ir.beigirad.zigzagview.ZigzagView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:zigzagBackgroundColor="@color/light_green_600"
        app:zigzagElevation="4dp"
        app:zigzagHeight="20dp"
        app:zigzagPaddingContent="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_zigzag"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ir.beigirad.zigzagview.ZigzagView>

    <!-- Purple Color Zigzag ,height 500dp -->
    <ir.beigirad.zigzagview.ZigzagView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:zigzagBackgroundColor="@color/purple_600"
        app:zigzagElevation="4dp"
        app:zigzagHeight="20dp"
        app:zigzagPaddingContent="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purple_zigzag"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ir.beigirad.zigzagview.ZigzagView>

    <!-- Pink Color Zigzag ,height 400dp -->
    <ir.beigirad.zigzagview.ZigzagView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:zigzagBackgroundColor="@color/pink_A100"
        app:zigzagElevation="4dp"
        app:zigzagHeight="20dp"
        app:zigzagPaddingContent="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pink_zigzag"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ir.beigirad.zigzagview.ZigzagView>

    <!-- Orange Color Zigzag ,height 300dp -->
    <ir.beigirad.zigzagview.ZigzagView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:zigzagBackgroundColor="@color/orange_600"
        app:zigzagElevation="4dp"
        app:zigzagHeight="20dp"
        app:zigzagPaddingContent="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orange_zigzag"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ir.beigirad.zigzagview.ZigzagView>

    <!-- Red Color Zigzag ,height 200dp -->
    <ir.beigirad.zigzagview.ZigzagView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:zigzagBackgroundColor="@color/red_600"
        app:zigzagElevation="4dp"
        app:zigzagHeight="20dp"
        app:zigzagPaddingContent="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_zigzag"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ir.beigirad.zigzagview.ZigzagView>


    <!-- Blue Color Zigzag, height 116dp -->
    <ir.beigirad.zigzagview.ZigzagView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="116dp"
        app:zigzagBackgroundColor="@color/blue_600"
        app:zigzagElevation="4dp"
        app:zigzagHeight="20dp"
        app:zigzagPaddingContent="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue_zigzag"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ir.beigirad.zigzagview.ZigzagView>

</RelativeLayout>